--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -65,28 +65,36 @@
 						<% if actualTableTheme != nil%>
 							</tbody>
 							</table>
+							</div>
 						<% end %>
 					<% end %>
 					
 					<% if startNewTable %>
-						<p>Theme : <%= source.theme%></p>
-						<table class="table table-bordered table-striped">
-						<thead>
-							<tr>
-								<th class="span1"><%= t("source.list.action")%></th>
-								<th class="span3"><%= t("source.list.label")%></th>
-								<th class="span5"><%= t("source.list.uri")%></th>
-								<th class="span1"><%= t("source.list.lang")%></th>
-							</tr>
-						</thead>
-						<tbody>
+						<div class="row-fluid">
+							<div class="span4 offset1">
+								Theme : <%= source.theme%>
+							</div>
+							<div class="span1">
+								<span class="showtable text-info pointerMouse" >Afficher</span>
+								<span class="hidetable text-info pointerMouse" hidden>Cacher</span>
+							</div>
+						</div>
+						<div class="row-fluid tableSource">
+							<table class="table table-bordered table-striped">
+							<thead>
+								<tr>
+									<th class="span1"><%= t("source.list.action")%></th>
+									<th class="span3"><%= t("source.list.label")%></th>
+									<th class="span5"><%= t("source.list.uri")%></th>
+									<th class="span1"><%= t("source.list.lang")%></th>
+								</tr>
+							</thead>
+							<tbody>
 					<% end %>
 					<tr>
 						<td class="text-center"><%= link_to "",edit_source_path(source) , :class => 'icon-edit'  %> <a href="/sources/<%= source.to_param%>/delete"><i class="icon-trash"></i></a></td>
 						<td><%= source.label %></td>
 						<td><%= link_to source.uri, url_for(:controller => :searches, :action => :create,  :sources => {:rss => [source.uri]}), :method => "post" %></td>
-						<!--<td> ( <span class="number_items_wait"> <a href="<%= uriNumber%>"> <i class="number_items_wait icon-refresh" data-url="<%= uriNumber%>" sourceId="<%= source%>" ></i> </a> </span><span class='number_items_container' sourceId="<%= source%>"  data-url="<%= uriNumber%>" ></span> <%= t("source.elemsNumber")%>) </td>
-						-->
 						<td class="text-center"><%= source.lang.upcase %></td>
 					</tr>
 					<% actualTableTheme = source.theme%>
