--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -278,6 +278,10 @@ a.accordion-toggle:hover{
   text-align : center;
 }
 
+.table th.text-center{
+  text-align : center;
+}
+
 td a:hover, td a:visited{
   background:none;
   color:black;
