--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -52,6 +52,7 @@
 			<div class="accordion-inner">
 				<% startNewTable = true %>
 				<% actualTableTheme = nil%>
+				<% numberTheme = 0 %>
 				
 				<% @sources.sort! {|a,b| [a.theme,a.label,a.uri,a.lang]<=>[b.theme,b.label,b.uri,b.lang]}  %>
 				
@@ -61,10 +62,12 @@
 					<% uriNumber = filters_getNumber_path(:old => [filter]) %>
 					
 					<% if source.theme != actualTableTheme%>
-						<% startNewTable = true%>
+						<% startNewTable = true %>
+						<% numberTheme += 1 %>
 						<% if actualTableTheme != nil%>
 							</tbody>
 							</table>
+							</div>
 							</div>
 						<% end %>
 					<% end %>
@@ -72,24 +75,25 @@
 					<% if startNewTable %>
 						<div class="row-fluid">
 							<div class="span4 offset1">
-								Theme : <%= source.theme%>
+								<b><%= t("source.list.theme")%> <%= numberTheme %> : <%= source.theme %></b>
 							</div>
 							<div class="span1">
-								<span class="showtable text-info pointerMouse" >Afficher</span>
-								<span class="hidetable text-info pointerMouse" hidden>Cacher</span>
+								<span class="showtable text-info pointerMouse" ><%= t("source.list.show")%></span>
+								<span class="hidetable text-info pointerMouse" hidden><%= t("source.list.hide")%></span>
 							</div>
 						</div>
 						<div class="row-fluid tableSource">
+							<div class="span10 offset1">
 							<table class="table table-bordered table-striped">
-							<thead>
-								<tr>
-									<th class="span1"><%= t("source.list.action")%></th>
-									<th class="span3"><%= t("source.list.label")%></th>
-									<th class="span5"><%= t("source.list.uri")%></th>
-									<th class="span1"><%= t("source.list.lang")%></th>
-								</tr>
-							</thead>
-							<tbody>
+								<thead>
+									<tr>
+										<th class="span1 text-center"><%= t("source.list.action")%></th>
+										<th class="span3"><%= t("source.list.label")%></th>
+										<th class="span5"><%= t("source.list.uri")%></th>
+										<th class="span1 text-center"><%= t("source.list.lang")%></th>
+									</tr>
+								</thead>
+								<tbody>
 					<% end %>
 					<tr>
 						<td class="text-center"><%= link_to "",edit_source_path(source) , :class => 'icon-edit'  %> <a href="/sources/<%= source.to_param%>/delete"><i class="icon-trash"></i></a></td>
@@ -99,6 +103,12 @@
 					</tr>
 					<% actualTableTheme = source.theme%>
 					<% startNewTable = false%>
+				<% end %>
+				<% if @sources.count > 0%>
+					</tbody>
+					</table>
+					</div>
+					</div>
 				<% end %>
 			</div>
 		</div>
