--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -1,7 +1,12 @@
+<div class="row-fluid">
+	<div class="span12">
+		<h1>Gestion des sources utilisateurs</h1>
+	</div>
+</div>
 <div class="accordion" id="accordion2">
 	<div class="accordion-group">
 		<div class="accordion-heading">
-			<h2><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseNew"> <i class="icon-expand"></i> <%= t("source.new.title")%> </a></h2>
+			<h2><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseNew"> <i class="icon-chevron-sign-right"></i> <%= t("source.new.title")%> </a></h2>
 		</div>
 		<div id="collapseNew" class="accordion-body collapse">
 			<div class="accordion-inner">
@@ -11,7 +16,7 @@
 	</div>
 	<div class="accordion-group">
 		<div class="accordion-heading">
-			<h2><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOpml"> <i class="icon-expand"></i> <%= t("source.opml.title")%> </a></h2>
+			<h2><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOpml"> <i class="icon-chevron-sign-right"></i> <%= t("source.opml.title")%> </a></h2>
 		</div>
 		<div id="collapseOpml" class="accordion-body collapse">
 			<div class="accordion-inner">
@@ -36,7 +41,7 @@
 	</div>
 	<div class="accordion-group">
 		<div class="accordion-heading">
-			<h2><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseGroups"> <i class="icon-expand"></i> <%= t("source.groups.title")%> </a></h2>
+			<h2><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseGroups"> <i class="icon-chevron-sign-right"></i> <%= t("source.groups.title")%> </a></h2>
 		</div>
 		<div id="collapseGroups" class="accordion-body collapse">
 			<div class="accordion-inner">
@@ -46,7 +51,7 @@
 	</div>
 	<div class="accordion-group">
 		<div class="accordion-heading">
-			<h2><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseAll"> <i class="icon-collapse"></i> <%= t("source.your.title")%> </a></h2>
+			<h2><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseAll"> <i class="icon-chevron-sign-down"></i> <%= t("source.your.title")%> </a></h2>
 		</div>
 		<div id="collapseAll" class="accordion-body collapse in">
 			<div class="accordion-inner">
