Put the title in yml file

--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row-fluid">
 	<div class="span12">
-		<h1>Gestion des sources utilisateurs</h1>
+		<h1><%= t("source.title")%></h1>
 	</div>
 </div>
 <div class="accordion" id="accordion2">
