--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -55,6 +55,12 @@
 		</div>
 		<div id="collapseAll" class="accordion-body collapse in">
 			<div class="accordion-inner">
+				<div class="row-fluid">
+					<div class="span2 offset5">
+						<i id="showAllSources" class="text-info pointerMouse"><%= t("source.list.showall")%></i>
+						<i id="hideAllSources" class="text-info pointerMouse" hidden><%= t("source.list.hideall")%></i>
+					</div>
+				</div>
 				<% startNewTable = true %>
 				<% actualTableTheme = nil%>
 				<% numberTheme = 0 %>
@@ -87,7 +93,7 @@
 								<span class="hidetable text-info pointerMouse" hidden><%= t("source.list.hide")%></span>
 							</div>
 						</div>
-						<div class="row-fluid tableSource">
+						<div class="row-fluid tableSource" hidden>
 							<div class="span10 offset1">
 							<table class="table table-bordered table-striped">
 								<thead>
