--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -296,6 +296,10 @@ td a:hover, td a:visited{
 span.text-info:hover{
   text-decoration : underline;
 }
+
+#btnImport{
+  margin-left: 0;
+}
 /**
  *   End of source users section
  */
