--- a/ZONE-watcher/app/views/sources/_form.html.erb
+++ b/ZONE-watcher/app/views/sources/_form.html.erb
@@ -13,28 +13,28 @@
   <% end %>
 
   <div class="control-group">
-    <%= f.label :uri, class: "control-label span2" %>
+    <%= f.label t("source.list.uri"), class: "control-label span2" %>
     <div class="controls span6">
-        <%= f.text_field :uri, class: "span12" %>
+        <%= f.url_field :uri, class: "span12" , :required => "true"%>
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :label, class: "control-label span2" %>
+    <%= f.label t("source.list.label"), class: "control-label span2" %>
     <div class="controls span6">
-        <%= f.text_field :label, class: "span12" %>
+        <%= f.text_field :label, class: "span12", :required => "true" %>
     </div>
   </div>
 
 
     <div class="control-group">
-      <label for="ajax-combo" class="control-label span2"><%=  t("source.lang") %>:</label>
+      <label for="ajax-combo" class="control-label span2"><%=  t("source.list.lang") %></label>
       <div class="controls span6">
         <div id="ajax-container-lang"></div>
       </div>
     </div>
 
     <div class="control-group">
-      <label for="ajax-combo" class="control-label span2"><%=  t("source.theme") %>:</label>
+      <label for="ajax-combo" class="control-label span2"><%=  t("source.list.theme") %></label>
       <div class="controls span6">
         <div id="ajax-container-theme"></div>
       </div>
