--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -34,7 +34,6 @@
 	<% end %>
   </div>
 </div>
-
 <div class="row-fluid">
 	<div class="span12">
 		<h1><%= t("source.title")%></h1>
@@ -46,70 +45,82 @@
 		<a href="#modalNewImport" role="button" class="btn btn-danger" data-toggle="modal"><%= t("source.opml.title")%></a>
 	</div>
 </div>
-<div class="row-fluid">
-	<div class="span2 offset5">
-		<i id="showAllSources" class="text-info pointerMouse"><%= t("source.list.showall")%></i>
-		<i id="hideAllSources" class="text-info pointerMouse" hidden><%= t("source.list.hideall")%></i>
-	</div>
-</div>
-<% startNewTable = true %>
+
+<hr class="span10 offset1"/>
+
 <% actualTableTheme = nil%>
-<% numberTheme = 0 %>
 
 <% @sources.sort! {|a,b| [a.theme,a.label,a.uri,a.lang]<=>[b.theme,b.label,b.uri,b.lang]}  %>
-
-<% @sources.each do |source| %>
-	<% next if source == nil  %>
-	<% filter = Filter.new(:prop => "http://purl.org/rss/1.0/source",:value => source.uri) %>
-	<% uriNumber = filters_getNumber_path(:old => [filter]) %>
+<div class="row-fluid" >
+	<div class="span2 offset1">
+		<ul id="navTheme" class="nav nav-list well span2 affix" data-spy="affix" data-offset-top="0">
+			<li class="nav-header">Vos thèmes</li>
+			<% firstClass = "active" %>
+			<% @sources.each do |source| %>
+				<% next if source == nil  %>
+				<% if source.theme == "" %>
+					<% source.theme = "undefined" %>
+				<% end %>
+				<% next if source.theme == actualTableTheme  %>
+			  	<li class="<%= firstClass %>">
+			  		<a href="#" onclick="$('.tableSource').hide();$('#source<%= source.theme %>').show();$('#navTheme').children().removeClass('active');$(this).parent().addClass('active')">
+			  			<%= source.theme %>
+			  		</a>
+			  	</li>
+			  	<% actualTableTheme = source.theme %>
+			  	<% firstClass = "" %>
+			<% end %>
+			<li class="divider"></li>
+			<li><a id="btn_up" href="#toppage"><i class="icon-collapse-top"></i> Retour en haut</a></li>
+		</ul>
+	</div>
+	<% startNewTable = true %>
+	<% actualTableTheme = nil%>
+	<% numberTheme = 0 %>
 	
-	<% if source.theme != actualTableTheme%>
-		<% startNewTable = true %>
-		<% numberTheme += 1 %>
-		<% if actualTableTheme != nil%>
-			</tbody>
-			</table>
-			</div>
-			</div>
+	<% @sources.each do |source| %>
+		<% next if source == nil  %>
+		<% filter = Filter.new(:prop => "http://purl.org/rss/1.0/source",:value => source.uri) %>
+		<% uriNumber = filters_getNumber_path(:old => [filter]) %>
+		
+		<% if source.theme == "" %>
+			<% source.theme = "undefined" %>
 		<% end %>
+		
+		<% if source.theme != actualTableTheme%>
+			<% startNewTable = true %>
+			<% numberTheme += 1 %>
+			<% if actualTableTheme != nil%>
+				</tbody>
+				</table>
+				</div>
+			<% end %>
+		<% end %>
+		<% if startNewTable %>
+			<div id="source<%= source.theme %>" class="span9 tableSource">
+				<table class="table table-bordered table-striped">
+					<thead>
+						<tr>
+							<th class="span1 text-center"><%= t("source.list.action")%></th>
+							<th class="span3"><%= t("source.list.label")%></th>
+							<th class="span5"><%= t("source.list.uri")%></th>
+							<th class="span1 text-center"><%= t("source.list.lang")%></th>
+						</tr>
+					</thead>
+					<tbody>
+		<% end %>
+		<tr>
+			<td class="text-center"><%= link_to "",edit_source_path(source) , :class => 'icon-edit', :title => t("edit")  %> <a href="/sources/<%= source.to_param%>/delete" title="<%= t("delete")%>"><i class="icon-trash"></i></a></td>
+			<td><%= source.label %></td>
+			<td><%= link_to source.uri, url_for(:controller => :searches, :action => :create,  :sources => {:rss => [source.uri]}), :method => "post" %></td>
+			<td class="text-center"><%= source.lang.upcase %></td>
+		</tr>
+		<% actualTableTheme = source.theme%>
+		<% startNewTable = false%>
 	<% end %>
-	
-	<% if startNewTable %>
-		<div class="row-fluid">
-			<div class="span4 offset1">
-				<b><%= t("source.list.theme")%> <%= numberTheme %> : <%= source.theme %></b>
-			</div>
-			<div class="span1">
-				<span class="showtable text-info pointerMouse" ><%= t("source.list.show")%></span>
-				<span class="hidetable text-info pointerMouse" hidden><%= t("source.list.hide")%></span>
-			</div>
+	<% if @sources.count > 0%>
+		</tbody>
+		</table>
 		</div>
-		<div class="row-fluid tableSource" hidden>
-			<div class="span10 offset1">
-			<table class="table table-bordered table-striped">
-				<thead>
-					<tr>
-						<th class="span1 text-center"><%= t("source.list.action")%></th>
-						<th class="span3"><%= t("source.list.label")%></th>
-						<th class="span5"><%= t("source.list.uri")%></th>
-						<th class="span1 text-center"><%= t("source.list.lang")%></th>
-					</tr>
-				</thead>
-				<tbody>
 	<% end %>
-	<tr>
-		<td class="text-center"><%= link_to "",edit_source_path(source) , :class => 'icon-edit', :title => t("edit")  %> <a href="/sources/<%= source.to_param%>/delete" title="<%= t("delete")%>"><i class="icon-trash"></i></a></td>
-		<td><%= source.label %></td>
-		<td><%= link_to source.uri, url_for(:controller => :searches, :action => :create,  :sources => {:rss => [source.uri]}), :method => "post" %></td>
-		<td class="text-center"><%= source.lang.upcase %></td>
-	</tr>
-	<% actualTableTheme = source.theme%>
-	<% startNewTable = false%>
-<% end %>
-<% if @sources.count > 0%>
-	</tbody>
-	</table>
-	</div>
-	</div>
-<% end %>
-
+</div>
