--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -298,6 +298,32 @@ span.text-info:hover{
 #btn_up{
   display : none;
 }
+
+.nav-list> li > a {
+  display: block;
+  width: 190px \9;
+  margin: 0 0 -1px;
+  padding: 8px 14px;
+  border: 1px solid #e5e5e5;
+}
+
+.nav-list> li > a > i{
+  opacity : 0.25;
+}
+
+.nav-list> li > a:hover{
+  color: #005580;
+}
+
+.nav-list > li:first-child > a{
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.nav-list > li:last-child > a{
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
 /**
  *   End of source users section
  */
