Implement the drag and drop for the sources

--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -77,6 +77,7 @@
 		<% startNewTable = true %>
 		<% actualTableTheme = nil%>
 		<% numberTheme = 0 %>
+		<% numberSource = 0 %>
 		
 		<% @sources.each do |source| %>
 			<% next if source == nil  %>
@@ -98,7 +99,8 @@
 			<% end %>
 			<% if startNewTable %>
 				<fieldset id="source<%= source.theme %>">
-					<table class="table table-bordered table-striped">
+					Theme :<%= source.theme %>
+					<table id="table<%=source.theme%>" class="table table-bordered table-striped" ondrop="dropSource(event,'table<%=source.theme%>')" ondragover="allowDrop(event)">
 						<thead>
 							<tr>
 								<th class="span1 text-center"><%= t("source.list.action")%></th>
@@ -109,7 +111,7 @@
 						</thead>
 						<tbody>
 			<% end %>
-			<tr>
+			<tr id="<%=numberSource%>" draggable="true" ondragstart="drag(event)">
 				<td class="text-center"><%= link_to "",edit_source_path(source) , :class => 'icon-edit', :title => t("edit")  %> <a href="/sources/<%= source.to_param%>/delete" title="<%= t("delete")%>"><i class="icon-trash"></i></a></td>
 				<td><%= source.label %></td>
 				<td><%= link_to source.uri, url_for(:controller => :searches, :action => :create,  :sources => {:rss => [source.uri]}), :method => "post" %></td>
@@ -117,6 +119,7 @@
 			</tr>
 			<% actualTableTheme = source.theme%>
 			<% startNewTable = false%>
+			<% numberSource += 1 %>
 		<% end %>
 		<% if @sources.count > 0%>
 			</tbody>
