--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -64,7 +64,7 @@
 							<% source.theme = "undefined" %>
 						<% end %>
 						<% next if source.theme == actualTableTheme  %>
-					  	<li class="<%= firstClass %>" ondrop="dropSource(event,'table<%=source.theme%>')" ondragover="allowDrop(event)">
+					  	<li class="<%= firstClass %>" ondrop="dropSource(event,'<%=source.theme%>')" ondragover="allowDrop(event)">
 					  		<a href="#source<%= source.theme %>">
 					  			<%= source.theme %> <i class="icon-chevron-right pull-right"></i>
 					  		</a>
@@ -107,7 +107,7 @@
 			<% if startNewTable %>
 				<fieldset id="source<%= source.theme %>">
 					Theme :<%= source.theme %>
-					<table id="table<%=source.theme%>" class="table table-bordered table-striped">
+					<table id="<%=source.theme%>" class="table table-bordered table-striped">
 						<thead>
 							<tr>
 								<th class="span1 text-center"><%= t("source.list.action")%></th>
@@ -121,7 +121,7 @@
 			<tr id="<%=numberSource%>" draggable="true" ondragstart="drag(event)">
 				<td class="text-center"><%= link_to "",edit_source_path(source) , :class => 'icon-edit', :title => t("edit")  %> <a href="/sources/<%= source.to_param%>/delete" title="<%= t("delete")%>"><i class="icon-trash"></i></a></td>
 				<td><%= source.label %></td>
-				<td><%= link_to source.uri, url_for(:controller => :searches, :action => :create,  :sources => {:rss => [source.uri]}), :method => "post" %></td>
+				<td><%= link_to source.uri, url_for(:controller => :searches, :action => :create,  :sources => {:rss => [source.uri]}), :method => "post", :class => "linkSource"%></td>
 				<td class="text-center"><%= source.lang.upcase %></td>
 			</tr>
 			<% actualTableTheme = source.theme%>
