--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -80,7 +80,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="scrollTable" class="span8">
+	<div id="scrollTable" class="span8" data-spy="scroll" data-target="#navTheme" data-offset-top="10">
 		<% startNewTable = true %>
 		<% actualTableTheme = nil%>
 		<% numberTheme = 0 %>
