--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <%= javascript_include_tag "/jwplayer/jwplayer.js" %>
   <%= favicon_link_tag "favicon.png" %>
 </head>
-<body data-spy="scroll" data-target="#navTheme" data-offset-top="50">
+<body>
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
