--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -64,7 +64,7 @@
 							<% source.theme = "undefined" %>
 						<% end %>
 						<% next if source.theme == actualTableTheme  %>
-					  	<li class="<%= firstClass %>" ondrop="dropSource(event,'<%=source.theme%>')" ondragover="allowDrop(event)">
+					  	<li class="<%= firstClass %>" ondrop="dropSource(event,'#<%=source.theme%>')" ondragover="allowDrop(event)">
 					  		<a href="#source<%= source.theme %>">
 					  			<%= source.theme %> <i class="icon-chevron-right pull-right"></i>
 					  		</a>
