Add a break-word option to the td of user source

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -347,6 +347,10 @@ span.text-info:hover{
 fieldset{
   padding-top : 45px;
 }
+
+.tdBreakable{
+  word-break: break-all;
+}
 /**
  *   End of source users section
  */
