Added a break option in the source tabs

--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -190,8 +190,8 @@
 														@sources.each do |source| %>
 															<tr>
 																<td class="span2"><%= source.theme %></td>
-																<td class="span5"><%= source.uri%></td>
-																<td class="span3"><%= source.label %></td>
+																<td class="span5 tdBreakable"><%= source.uri%></td>
+																<td class="span3 tdBreakable"><%= source.label %></td>
 																<td class="span2">
 																<button class="btn btn-success" type="button" onclick="addPersonnalRss('<%= source.uri%>')">
 																	Ajouter
