--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -195,8 +195,8 @@
 																	Ajouter
 																</button></td>
 																<td class="span2"><%= source.theme %></td>
-																<td class="span5 breakWord"><%= source.uri%></td>
-																<td class="span3 breakWord"><%= source.label %></td>
+																<td class="span5"><%= source.uri%></td>
+																<td class="span3"><%= source.label %></td>
 															</tr>
 														<% end %>
 													<% end %>
