--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -176,32 +176,11 @@
 											</div>
 										</div>
 										<div class="row-fluid importRss" hidden>
-											<table class="table table-striped">
-												<thead>
-													<tr>
-														<th><%= t('source.list.action')%></th>
-														<th><%= t('source.list.theme')%></th>
-														<th><%= t('source.list.uri')%></th>
-														<th><%= t('source.list.label')%></th>
-													</tr>
-												</thead>
-												<tbody>
-													<% if user_signed_in?
-														@sources = current_user.getSources
-														@sources.each do |source| %>
-															<tr>
-																<td class="span2">
-																<button class="btn btn-success" type="button" onclick="addPersonnalRss('<%= source.uri%>')">
-																	Ajouter
-																</button></td>
-																<td class="span2"><%= source.theme %></td>
-																<td class="span5"><%= source.uri%></td>
-																<td class="span3"><%= source.label %></td>
-															</tr>
-														<% end %>
-													<% end %>
-												</tbody>
-											</table>
+											<div class="row-fluid">
+												<div class="span2 offset5">
+													<i class="icon-refresh"></i><%= t('source.your.loading')%>
+												</div>
+											</div>
 										</div>
 									</div>
 									<!--formContent rss-->
