--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -25,8 +25,8 @@
 		<div class="row-fluid">
             <img src="<%= @item.getTypePicture%>" class="littleCircleImage" width=30 height=30>
             <a class="titleItem" target="_blank" href= "<%= @item.uri %>"><b><u><%= @item.props["http://purl.org/rss/1.0/title"][0]%></u> </b> </a>
-            <span class="showFavorite"><i class="icon-share pointerMouse"></i></span>
-            <span class="row-favorite btn-group">
+            <span class="showFavorite hide"><i class="icon-share pointerMouse"></i></span>
+            <span class="row-favorite btn-group hide">
                 <%= render 'show_tool_bar', :item => @item %>
             </span>
 			<i>
