Implements the mark as read button

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -40,7 +40,7 @@ a.label:visited{
   clear: right;
 }
 
-.item-bloc:nth-child(odd){
+.item-bloc:nth-child(odd).longWell{
   background-color:#e8e8e8;
 }
 
