--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -17,6 +17,10 @@
   <%= javascript_include_tag "/jquery.sexy-combo/jquery.sexy-combo.js" %>
   <%= javascript_include_tag "/jwplayer/jwplayer.js" %>
   <%= favicon_link_tag "favicon.png" %>
+  <%= javascript_tag do %>
+ 	I18n.defaultLocale = "<%= I18n.default_locale %>";
+  	I18n.locale = "<%= I18n.locale %>";
+  <% end %>
 </head>
 <body>
   <div class="navbar navbar-fixed-top">
