--- a/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
+++ b/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
@@ -4,7 +4,7 @@
 <button class="btn btnFavorite btn-share" onclick='addFavorite("<%= @item.uri%>")'>
   <i class="icon icon-heart"></i>
 </button>
-<button class="btn btn-share" onclick='$(this).parents(".item-bloc").css("opacity",0.5)'>
+<button class="btn btn-share" onclick='checkOpacity(this)'>
   <i class="icon icon-check"></i>
 </button>
 <a class="shareLink btn-share" href="https://www.facebook.com/sharer.php?u=<%= @item.uri %>" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
