--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -41,7 +41,7 @@
             </i>
             <% if @item.uri.starts_with?('https://twitter.com') || @item.uri.starts_with?('http://twitter.com')  %>
             	<br/>
-            	<i> <%= @item.props["http://zone-project.org/model/plugins/twitter#author"][0] %></i>
+            	<i> Via <%= @item.props["http://zone-project.org/model/plugins/twitter#author"][0] %></i>
             <% end %>
 		</div>
 
