--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -73,7 +73,7 @@ a.label:visited{
 }
 
 .label-info[href] , .label-info[href]:visited, .label-info[href]:hover{
-  color : #2d6987;
+  color : #0088cc;
   background-color : #f5f5f5;
   border:1px solid #e3e3e3;
   border-radius: 4px;
@@ -101,8 +101,8 @@ a.label:visited{
 
 .label-twitter[href] , .label-twitter[href]:visited, .label-twitter[href]:hover{
   color : #0088cc;
-  background-color : #f5f5f5;
-  border:1px solid #e3e3e3;
+  background-color : #cfe4f0;
+  border:1px solid #a6cde6;
   border-radius: 4px;
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
   text-shadow: none;
