--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -5,24 +5,21 @@
 %>
 
 <div class="row-fluid">
-	<% if image != nil  %>
-	<div class="span3">
-		<% if image.end_with?("flv") || image.end_with?("mp4") %>
-            <div id="<%= image%>">
-                Loading the player...
-            </div>
-            <script type="text/javascript">
-                jwplayer("<%= image%>").setup({file: "<%= image%>",	width: "100%"});
-            </script>
-		<%else%>
-		    <img src="<%= image%>" class="img-polaroid span12">
+	<div class="span12">
+		<% if image != nil  %>
+			<% if image.end_with?("flv") || image.end_with?("mp4") %>
+	            <div id="<%= image%>">
+	                Loading the player...
+	            </div>
+	            <script type="text/javascript">
+	                jwplayer("<%= image%>").setup({file: "<%= image%>",	width: "100%"});
+	            </script>
+			<%else%>
+			    <img src="<%= image%>" class="img-polaroid span3 pull-left img-marged">
+			<%end%>
 		<%end%>
-	</div>
-
-	<div class="span9">
-	<%end%>
-        <!--header news part -->
 		<div class="row-fluid">
+			<!--header news part -->
             <img src="<%= @item.getTypePicture%>" class="littleCircleImage" width=30 height=30>
             <a class="titleItem" target="_blank" href= "<%= @item.uri %>"><b><u><%= @item.props["http://purl.org/rss/1.0/title"][0]%></u> </b> </a>
             <span class="showFavorite hide"><i class="icon-share pointerMouse"></i></span>
@@ -43,11 +40,9 @@
             	<br/>
             	<i> Via <%= @item.props["http://zone-project.org/model/plugins/twitter#author"][0] %></i>
             <% end %>
-		</div>
-
-        <!--content news part -->
-		<div class="row-fluid">
-			<div class="contentArticle">
+            
+            <!--content news part -->
+            <div class="contentArticle">
 				<%= if @item.props["http://purl.org/rss/1.0/description"] != nil
         			@item.props["http://purl.org/rss/1.0/description"][0].html_safe 
         		end %>
