Favorite icon is now a star

--- a/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
+++ b/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
@@ -2,7 +2,7 @@
   <i class="icon icon-tag"></i>
 </button>
 <button class="btn btnFavorite btn-share" onclick='addFavorite("<%= @item.uri%>")'>
-  <i class="icon icon-heart"></i>
+  <i class="icon icon-star"></i>
 </button>
 <button class="btn btn-share" onclick='checkOpacity(this)'>
   <i class="icon icon-check"></i>
