Add a button to add a tag to the item

--- a/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
+++ b/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
@@ -1,5 +1,8 @@
-<button class="btn btn-share" data-toggle="collapse" data-parent="#accordion-<%= @item.getUriHash%>" href="#collapse-<%= @item.getUriHash%>">
+<!--<button class="btn btn-share" data-toggle="collapse" data-parent="#accordion-<%= @item.getUriHash%>" href="#collapse-<%= @item.getUriHash%>">
   <i class="icon icon-tag"></i>
+</button>-->
+<button class="btn btn-share" onclick="addItemtag(this)">
+	<i class="icon icon-tag"></i>
 </button>
 <button class="btn btnFavorite btn-share" onclick='addFavorite("<%= @item.uri%>")'>
   <i class="icon icon-star"></i>
