--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -72,6 +72,14 @@
                     <%end%>
                 <%end%>
 			</div>
+			<div class="addtag pull-left" hidden>
+				<div class="input-append span12">
+					<input class="span8" type="text" placeholder="Tag">
+					<button class="btn btn-success">
+						<%= raw t 'newmodal.sources.add' %>
+					</button>
+				</div>
+			</div>
 
           <!--footer news part with share buttons -->
 			<div class="pull-right row-list">
