--- a/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
+++ b/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
@@ -19,3 +19,6 @@
 <a class="shareLink btn-share" href="https://twitter.com/share?url=<%= @item.uri %>&via=readornet&text=<%= @item.props["http://purl.org/rss/1.0/title"][0]%>" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
   <img class="littleCircleImage" src="assets/foregroundTwitter.png" height=30 width=30>
 </a>
+<a class="shareLink btn-share" target="_blank" href="http://www.diigo.com/post?url=<%= @item.uri %>&title=<%= @item.props["http://purl.org/rss/1.0/title"][0]%>">
+	<img style="border:none" src="http://www.diigo.com/images/diigo-icon/32.png" alt="Add to Diigo" height=30 width=30/>
+</a>
