Correct a bug for the long tag

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -278,3 +278,11 @@ a.label:visited{
 .img-marged{
   margin-right : 5px;
 }
+
+.btn-wrap{
+  white-space: normal;
+}
+
+.label-tag{
+ white-space: pre-wrap;
+}
