--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -66,7 +66,7 @@
                         end
                         %>
 
-                        <div class="btn-group btn-group-label">
+                        <div class="btn-group btn-group-label btn-wrap">
                             <%= linkval %>
                         </div>
                     <%end%>
