Added i18n to placeholder for new tag

--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -74,7 +74,7 @@
 			</div>
 			<div class="addtag pull-left" hidden>
 				<div class="input-append span12">
-					<input class="span8" type="text" placeholder="Tag">
+					<input class="span8" type="text" placeholder="<%= t('items.newtag')%>">
 					<button class="btn btn-success">
 						<%= raw t 'newmodal.sources.add' %>
 					</button>
