Added the link to the help page

--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
             <li class="<%= 'active' if current_page?(items_path) %>"><%= link_to t("menu.news"), items_path %></li>
             <li class="<%= 'active' if current_page?(sources_path) %>"><%= link_to t("menu.sources"), sources_path %></li>
             <li class="<%= 'active' if current_page?(twitter_path) %>"><%= link_to t("menu.twitter"), twitter_path %></li>
+            <li><%= link_to t("menu.help"), "http://www.zone-project.org/?p=718", :target => "_blank" %></li>
           </ul>
         </div>
         <div class="nav-collapse collapse pull-right">
