Multiple adding for rss own sources

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -227,6 +227,14 @@ span.label-wrap{
   background-color:#f89406;
 }
 
+.addTheme{
+  color: #0088cc;
+}
+.addTheme:hover{
+  background : none;
+  color : #0088cc;
+  text-decoration : underline;
+}
 /**
  *  End of RSS source section
  */ 
