--- a/ZONE-watcher/app/views/searches/selectSources.erb
+++ b/ZONE-watcher/app/views/searches/selectSources.erb
@@ -1,26 +1,53 @@
-<table class="table table-striped">
-	<thead>
-		<tr>
-			<th><%= t('source.list.action')%></th>
-			<th><%= t('source.list.theme')%></th>
-			<th><%= t('source.list.uri')%></th>
-			<th><%= t('source.list.label')%></th>
-		</tr>
-	</thead>
-	<tbody>
-		<% if user_signed_in?
-		@sources = current_user.getSources
-		@sources.each do |source| %>
-		<tr>
-			<td class="span2">
-			<button class="btn btn-success" type="button" onclick="addPersonnalRss('<%= source.uri%>')">
-				Ajouter
-			</button></td>
-			<td class="span2"><%= source.theme %></td>
-			<td class="span5"><%= source.uri%></td>
-			<td class="span3"><%= source.label %></td>
-		</tr>
+<hr/>
+<div class="row-fluid">
+	<button class="btn btn-info span4 offset4" onclick="addAllPersonnalRss(); return false">
+		<%= t('semanticsource.button.addAllTheme')%>
+	</button>
+</div>
+<% startNewTable = true %>
+<% actualTableTheme = nil%>
+<% @sources = current_user.getSources.sort! {|a,b| [a.theme,a.label,a.uri,a.lang]<=>[b.theme,b.label,b.uri,b.lang]} %>
+<% @sources.each do |source| %>
+	<% next if source == nil  %>
+	
+	<% if source.theme == "" %>
+		<% source.theme = "undefined" %>
+	<% end %>
+	
+	<% if source.theme != actualTableTheme%>
+		<% startNewTable = true %>
+		<% if actualTableTheme != nil%>
+			</tbody>
+			</table>
 		<% end %>
-		<% end %>
+	<% end %>
+	<% if startNewTable %>
+		Theme : <%= source.theme %> | 
+		<a class="addTheme" href="#" onclick="addAllThemePersonnalRss(this); return false">
+			<%= t('semanticsource.button.addTheme')%>
+		</a>
+		<table id="<%= source.theme%>" class="table table-bordered table-striped">
+			<thead>
+				<tr>
+					<th><%= t('source.list.action')%></th>
+					<th><%= t('source.list.label')%></th>
+					<th><%= t('source.list.uri')%></th>
+				</tr>
+			</thead>
+			<tbody>
+	<% end %>
+	<tr>
+		<td class="span2">
+		<button class="btn btn-success" type="button" onclick="addPersonnalRss('<%= source.uri%>');">
+			Ajouter
+		</button></td>
+		<td class="span5"><%= source.label %></td>
+		<td class="span5 uri"><%= source.uri%></td>
+	</tr>
+	<% actualTableTheme = source.theme%>
+	<% startNewTable = false%>
+<% end %>
+<% if @sources.count > 0%>
 	</tbody>
-</table>
+	</table>
+<% end %>
